--- a/package.json
+++ b/package.json
@@ -7,10 +7,16 @@
         "@testing-library/react": "^11.2.7",
         "@testing-library/user-event": "^12.8.3",
         "firebase": "^9.3.0",
+        "mysql": "^2.18.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
-        "react-router-dom": "5.3.0",
+        "react-icons": "^4.3.1",
+        "react-loader-spinner": "^4.0.0",
+        "react-redux": "^7.2.6",
+        "react-redux-firebase": "^3.10.0",
+        "react-router-dom": "^5.3.0",
         "react-scripts": "4.0.3",
+        "redux": "^4.1.2",
         "styled-components": "^5.3.3",
         "web-vitals": "^1.1.2"
     },
