--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
         "react-dom": "^17.0.2",
         "react-icons": "^4.3.1",
         "react-loader-spinner": "^4.0.0",
+        "react-placeholder": "^4.1.0",
+        "react-placeholder-loading": "^0.5.27",
         "react-redux": "^7.2.6",
         "react-redux-firebase": "^3.10.0",
         "react-router-dom": "^5.3.0",
